--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,10 +6,11 @@
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <%= csrf_meta_tag%>
+    
     <%= stylesheet_link_tag 'blueprint/screen', :media => 'screen'%>
     <%= stylesheet_link_tag 'blueprint/print', :media => 'print'%>
     <!--[if lt IE8]><%=stylesheet_link_tag 'blueprint/ie' %><![endif]-->
-    <% stylesheet_link_tag 'custom', :media => 'screen' %>
+    <%= stylesheet_link_tag 'blueprint/custom', :media => 'screen' %>
   </head>
   <body>
     <div class="container">
@@ -21,7 +22,9 @@
             <li><%= link_to "Help", '#'%></li>
             <li><%= link_to "Sign in", '#'%></li>
           </ul>
-      </head>
+        </nav>
+      </header>
+     
       
       <section class="round">
     
