--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,28 +2,16 @@
 <html>
   <head>
     <title>Ruby on Rails Tutorial Sample App | <%= title %></title>
-    <!--[if lt IE 9]>
-    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+
     <%= csrf_meta_tag%>
+    <%= render 'layouts/stylesheets' %>
     
-    <%= stylesheet_link_tag 'blueprint/screen', :media => 'screen'%>
-    <%= stylesheet_link_tag 'blueprint/print', :media => 'print'%>
-    <!--[if lt IE8]><%=stylesheet_link_tag 'blueprint/ie' %><![endif]-->
-    <%= stylesheet_link_tag 'blueprint/custom', :media => 'screen' %>
+
   </head>
   <body>
     <div class="container">
-      <header>
-        <%= image_tag("logo.png", :alt => "Sample App", :class => "round")%>
-        <nav class="round">
-          <ul>
-            <li><%= link_to "Home", '#'%></li>
-            <li><%= link_to "Help", '#'%></li>
-            <li><%= link_to "Sign in", '#'%></li>
-          </ul>
-        </nav>
-      </header>
+      <%= render 'layouts/header'%>
+      
      
       
       <section class="round">
@@ -31,6 +19,6 @@
         <%= yield%>
     
       </section>
-    
+        <%= render 'layouts/footer'%>
   </body>
 </html>    
