--- a/app/views/layouts/_stylesheets.html.erb
+++ b/app/views/layouts/_stylesheets.html.erb
@@ -1,7 +1,7 @@
-<%= stylesheet_link_tag 'blueprint/screen', :media => 'screen'%>
-<%= stylesheet_link_tag 'blueprint/print', :media => 'print'%>
+<%= stylesheet_link_tag 'blueprint/screen'%>
+
 <!--[if lt IE8]><%=stylesheet_link_tag 'blueprint/ie' %><![endif]-->
-<%= stylesheet_link_tag 'blueprint/custom', :media => 'screen' %>
+<%= stylesheet_link_tag 'blueprint/custom' %>
 <!--[if lt IE 9]>
 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
